--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1> {{name}}, Bienvenue dans Angular </h1>
+<app-navbar></app-navbar>
+
+<div class="container-fluid">
+    <app-products-list></app-products-list>
+    <app-footer></app-footer>
+</div>
